# web_hw13

./: docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: d74a93312d9e_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 13298  2619
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16395  16404  16406  16407  16408  16409  16410  16411  16412  16414  16420  16421  16423  16430  16433  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+7 more)
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/routes/templates/: reset_password_form.html
src/services/: auth.py  email.py
src/services/templates/: password_reset_template.html
